# space-turkeys

./: .gdbinit  .gitignore  .gitmodules  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.mac  README  choice.cpp  choice.h  clear_port.sh  client.cpp  client_game.cpp  client_game.h  com.cpp  com.h  com_client.cpp  com_client.h  com_server.cpp  com_server.h  command.cpp  command.h  command_gui.cpp  command_gui.h  configure  configure.ac  fleet.cpp  fleet.h  game.cpp  game_data.cpp  game_data.h  game_handler.cpp  game_handler.h  game_settings.cpp  game_settings.h  graphics.cpp  graphics.h  grid_tree.cpp  grid_tree.h  (+33 more)
analysis/: analysis.R  draw_polygons.R  run_solsys_test.sh  run_test.sh  test.R
data/: ship_data.json  solar_data.json  upgrade_data.json
docs/: Doxyfile.in  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  animation.cpp  animation.h  animation.hpp  animation_data.h  animation_data.hpp  build_universe.cpp  build_universe.h  choice.cpp  choice.h  choice.hpp  choice_gui.cpp  choice_gui.h  choice_gui.hpp  client.cpp  client_data_frame.hpp  client_game.cpp  client_game.h  client_game.hpp  client_game_data.h  client_utility_instantiation.cpp  com_client.cpp  com_client.h  com_client.hpp  com_server.cpp  com_server.h  com_server.hpp  command.cpp  command.h  command.hpp  command_gui.cpp  command_gui.h  command_gui.hpp  cost.cpp  cost.h  cost.hpp  data_frame.h  desktop.cpp  desktop.h  (+100 more)
